# CVAI-TURBO

./: .gitignore  Dockerfile  README.md  alembic.ini  project.md  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  cover_letters.py  cv.py  generate.py  jobs.py  profile.py
app/core/: config.py
app/db/: session.py
app/models/: base.py
app/schemas/: common.py  cover_letter.py  cv.py  job.py  profile.py
app/services/: ai.py
